# qtWeather

./: CMakeLists.txt  Main.qml  README.md  WeatherIcons.qml  main.cpp
